# zk-escrow-sol

./: .gitignore  .prettierignore  .prettierrc.js  Anchor.toml  DEPLOY.md  README.md  constants.ts  package.json  pnpm-lock.yaml
assets/: _collection.json
assets/json/: 1.json  10.json  11.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
deployments/devnet/: mock-usdc-deployment.json
docs/: s3-upload.md
programs/nullifier-registry/: Cargo.toml
programs/nullifier-registry/src/: lib.rs
programs/secp256k1-test/: Cargo.toml
programs/secp256k1-test/src/: errors.rs  lib.rs
programs/secp256k1-test/src/utils/: claim.rs  eth.rs  mod.rs
programs/spl-nft/: Cargo.toml
programs/spl-nft/src/: lib.rs
programs/spl-nft/src/contexts/: create_collection.rs  mint_nft.rs  verify_collection.rs
programs/spl_with_metadata/: Cargo.toml
programs/spl_with_metadata/src/: lib.rs
programs/token-escrow/: Cargo.toml
programs/token-escrow/src/: lib.rs
programs/zk-escrow-sol/: Cargo.toml
programs/zk-escrow-sol/src/: errors.rs  lib.rs
programs/zk-escrow-sol/src/utils/: claim.rs
scripts/: deploy-mock-usdc.ts  deploy.ts  init-collection.ts  initialize.ts  mint-collection.ts  mint-nft.ts  show-metadata.ts  upload-to-irys.ts  upload-to-s3.ts
tests/: create-mint.test.ts  escrow.test.ts  integration.test.ts  mint-nft.test.ts  nullifier.test.ts  secp256k1-test.ts  utils.ts  verify-proof-signature.ts  verify-proof-simple.test.ts  verify-proof-static.test.ts  verify-proof.test.ts
tests/fixtures/: proof.json  proof2.json  proof_origin.json  simple-proof.json
tests/helpers/: generate-proof.ts  generate-proof2.ts  generate-simple-proof.ts
