[package]
name = "token-escrow"
version = "0.1.0"
description = "Token Escrow Program with ZK Proof Verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
zk-escrow-sol = { path = "../zk-escrow-sol", features = ["cpi"] }
nullifier-registry = { path = "../nullifier-registry", features = ["cpi"] }
serde_json = "1.0"
solana-program = "2.1"
hex = "0.4"
