[package]
name = "zk-escrow-sol"
version = "0.1.0"
description = "ZK Escrow Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_escrow_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
hex = "0.4.3"
spl-nft = { path = "../spl-nft", features = ["cpi"] }
